Foutmelding bij verwijderen van Categorie met dieren (foreign key) Foutmelding bij verwijderen van Verblijf met dieren (foreign key) Foutmelding bij verwijderen van Dierentuin met verblijven (foreign key)
opgelost

en
- Dieren worden weergegeven bij het verwijderen van Category en Verblijf
- Verblijven worden weergegeven bij verwijderen Zoo

--- a/Dierentuin42/Views/Categories/Delete.cshtml
+++ b/Dierentuin42/Views/Categories/Delete.cshtml
@@ -24,6 +24,17 @@
                             <td class="fw-bold">@Html.DisplayNameFor(model => model.Name)</td>
                             <td>@Html.DisplayFor(model => model.Name)</td>
                         </tr>
+                        <tr>
+                            <td class="fw-bold">@Html.DisplayNameFor(model => model.Animals)</td>
+                            <td>
+                                <ul>
+                                    @foreach (var animal in Model.Animals)
+                                    {
+                                        <li>@animal.Name</li>
+                                    }
+                                </ul>
+                            </td>
+                        </tr>
                     </tbody>
                 </table>
 
