--- a/Dierentuin42/Views/Zoos/Delete.cshtml
+++ b/Dierentuin42/Views/Zoos/Delete.cshtml
@@ -26,6 +26,17 @@
                             <td class="fw-bold">@Html.DisplayNameFor(model => model.Name)</td>
                             <td>@Html.DisplayFor(model => model.Name)</td>
                         </tr>
+                        <tr>
+                            <td class="fw-bold">Verblijven</td>
+                            <td>
+                                <ul>
+                                    @foreach (var enclosure in Model.Enclosures)
+                                    {
+                                        <li>@enclosure.Name</li>
+                                    }
+                                </ul>
+                            </td>
+                        </tr>
                     </tbody>
                 </table>
 
