--- a/Dierentuin42/Views/Animals/FeedingTime.cshtml
+++ b/Dierentuin42/Views/Animals/FeedingTime.cshtml
@@ -20,16 +20,8 @@
             <tr>
                 <td>@feedingTime.Animal</td>
                 <td>@feedingTime.Prey</td>
-                <td>@feedingTime.Diet</td>  <!-- Display the Diet here -->
+                <td>@feedingTime.Diet</td>
             </tr>
         }
     </tbody>
 </table>
-
-<h3>Debug Output:</h3>
-<ul>
-    @foreach (var feedingTime in Model)
-    {
-        <li>Animal: @feedingTime.Animal, Prey: @feedingTime.Prey, FeedingTime: @feedingTime.FeedingTime, Diet: @feedingTime.Diet</li>
-    }
-</ul>
