--- a/Dierentuin42/Views/Zoos/Index.cshtml
+++ b/Dierentuin42/Views/Zoos/Index.cshtml
@@ -6,7 +6,21 @@
 
 <h1 class="text-center text-primary my-4 display-3 font-weight-bold">Dierentuinen Overzicht</h1>
 
-<!-- NIEUWE DIERENTUIN CREEREN -->
+<div class="text-center mb-4">
+    <a class="btn btn-success btn-lg mx-2 px-5 py-3 shadow-sm" asp-controller="Animals" asp-action="Sunrise">
+        <i class="fas fa-sun"></i> Sunrise
+    </a>
+    <a class="btn btn-warning btn-lg mx-2 px-5 py-3 shadow-sm" asp-controller="Animals" asp-action="Sunset">
+        <i class="fas fa-moon"></i> Sunset
+    </a>
+    <a class="btn btn-info btn-lg mx-2 px-5 py-3 shadow-sm" asp-controller="Animals" asp-action="FeedingTime">
+        <i class="fas fa-utensils"></i> Feeding Time
+    </a>
+</div>
+
+
+
+<!-- NIEUWE DIERENTUIN CREËREN -->
 <div class="text-center mb-4">
     <a class="btn btn-primary btn-lg px-5 py-3 shadow-sm" asp-action="Create">
         <i class="fas fa-plus-circle"></i> Nieuwe Dierentuin Creëren
