Enclosure kan nu de waarde "null" hebben en een verblijf kan nu meerdere habitat types bevatten

--- a/Dierentuin42/Views/Enclosures/Create.cshtml
+++ b/Dierentuin42/Views/Enclosures/Create.cshtml
@@ -48,8 +48,7 @@
 
                     <div class="form-group">
                         <label asp-for="EnclosureHabitatType" class="control-label"></label>
-                        <select asp-for="EnclosureHabitatType" class="form-control">
-                            <option value="">Selecteer een habitat type...</option>
+                        <select asp-for="EnclosureHabitatType" multiple class="form-control large-select" class="form-control">
                             @foreach (var habitat in Enum.GetValues(typeof(Dierentuin42.Models.Enclosure.HabitatType)).Cast<Dierentuin42.Models.Enclosure.HabitatType>())
                             {
                                 <option value="@habitat">@habitat</option>
