--- a/Dierentuin42/Views/Home/Index.cshtml
+++ b/Dierentuin42/Views/Home/Index.cshtml
@@ -1,7 +1,69 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Dierentuin42";
 }
 
-<div class="text-center">
-    <h1 class="display-4"><strong>Dierentuin42</strong></h1>
-</div>
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+
+<body>
+    <h1 class="d-flex justify-content-center fw-bold " style="font-family:'Segoe UI'">Welkom bij Dierentuin42 </h1>
+    <br />
+    <div id="carousel" class="carousel slide position-relative top-100">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="https://placehold.co/300x100" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="https://placehold.co/300x100" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="https://placehold.co/300x100" class="d-block w-100" alt="...">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        </button>
+    </div>
+    <br />
+    <br />
+    <div class="d-flex flex-row gap-4 justify-content-between">
+    <div class="card " style="width: 18rem;">
+        <img src="https://placehold.co/30x30" class="card-img-top" alt="...">
+        <div class="card-body">
+                <h5 class="card-title">Lorem ipsum odor amet</h5>
+                <p class="card-text"> Lorem ipsum odor amet, consectetuer adipiscing elit. </p>
+            <a href="#" class="btn btn-primary">Klik hier</a>
+        </div>
+    </div>
+    <div class="card " style="width: 18rem;">
+        <img src="https://placehold.co/30x30" class="card-img-top" alt="...">
+        <div class="card-body">
+                <h5 class="card-title">Lorem ipsum odor amet</h5>
+                <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. </p>
+                <a href="#" class="btn btn-primary">Klik hier</a>
+        </div>
+    </div>
+    <div class="card " style="width: 18rem;">
+        <img src="https://placehold.co/30x30" class="card-img-top" alt="...">
+        <div class="card-body">
+                <h5 class="card-title">Lorem ipsum odor amet</h5>
+                <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit.</p>
+            <a href="#" class="btn btn-primary">Klik hier</a>
+        </div>
+    </div>
+    </div>
+    <br />
+    <br />
+    <br />
+</body>
+
+</html>
+
