--- a/Dierentuin42/Views/Home/Index.cshtml
+++ b/Dierentuin42/Views/Home/Index.cshtml
@@ -13,16 +13,16 @@
 <body>
     <h1 class="d-flex justify-content-center fw-bold " style="font-family:'Segoe UI'">Welkom bij Dierentuin42 </h1>
     <br />
-    <div id="carousel" class="carousel slide position-relative top-100">
+    <div id="carousel" class="carousel slide position-relative top-100 w-50 h-50" style="position:relative; left:320px">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="https://placehold.co/300x100" class="d-block w-100" alt="...">
+                <img src="~/Img/c86c9557-0368-4235-b9ff-2db06503503d.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="https://placehold.co/300x100" class="d-block w-100" alt="...">
+                <img src="~/Img/51622fe0-d1d5-4238-8c10-b47b18fa0556.jpg" class="d-block w-100 " alt="...">
             </div>
             <div class="carousel-item">
-                <img src="https://placehold.co/300x100" class="d-block w-100" alt="...">
+                <img src="~/Img/1dc438dc-c734-4d37-b28b-472bd17699bc.jpg" class="d-block w-100" alt="...">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
@@ -36,27 +36,27 @@
     <br />
     <div class="d-flex flex-row gap-4 justify-content-between">
     <div class="card " style="width: 18rem;">
-        <img src="https://placehold.co/30x30" class="card-img-top" alt="...">
+            <img src="~/Img/9b48ded5-e4f4-4a5b-aaaa-5fa3f903667f.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-                <h5 class="card-title">Lorem ipsum odor amet</h5>
-                <p class="card-text"> Lorem ipsum odor amet, consectetuer adipiscing elit. </p>
-            <a href="#" class="btn btn-primary">Klik hier</a>
+                <h5 class="card-title">Ontmoet onze dieren</h5>
+                <p class="card-text"> Van schattig tot indrukwekkend, ontdek de prachtige dieren die onze dierentuin uniek maken. </p>
+            <a asp-controller ="Animals" asp-action="Index" class="btn btn-primary">Klik hier</a>
         </div>
     </div>
     <div class="card " style="width: 18rem;">
-        <img src="https://placehold.co/30x30" class="card-img-top" alt="...">
+            <img src="~/Img/6d225297-3281-4ae1-99e4-e0b305c55a8e.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-                <h5 class="card-title">Lorem ipsum odor amet</h5>
-                <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. </p>
-                <a href="#" class="btn btn-primary">Klik hier</a>
+                <h5 class="card-title">Unieke Verblijven</h5>
+                <p class="card-text">Onze dieren wonen in verblijven die hun natuurlijke leefomgeving perfect nabootsen. Ontdek het zelf. </p>
+                <a asp-controller="Enclosures" asp-action="Index" class="btn btn-primary">Klik hier</a>
         </div>
     </div>
     <div class="card " style="width: 18rem;">
-        <img src="https://placehold.co/30x30" class="card-img-top" alt="...">
+            <img src="~/Img/250a972a-a732-453a-97b2-b3b7549ea842.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-                <h5 class="card-title">Lorem ipsum odor amet</h5>
-                <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit.</p>
-            <a href="#" class="btn btn-primary">Klik hier</a>
+                <h5 class="card-title">Een Wereld vol Avontuur</h5>
+                <p class="card-text">Onze dierentuin biedt een onvergetelijke ervaring voor jong en oud. Kom en ontdek het zelf.</p>
+            <a asp-controller="Zoos" asp-action="Index" class="btn btn-primary">Klik hier</a>
         </div>
     </div>
     </div>
