--- a/Dierentuin42/Views/Shared/_Layout.cshtml
+++ b/Dierentuin42/Views/Shared/_Layout.cshtml
@@ -10,29 +10,29 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-primary border-bottom box-shadow mb-3 ">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" style="font-family:'Segoe UI';">Dierentuin42</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" style=" font-weight:600; font-family:'Segoe UI'; color:white; ">Dierentuin42</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-center">
-                    <ul class="navbar-nav" style="margin-right:150px;">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-center ">
+                    <ul class="navbar-nav" style="margin-right:150px; font-family:'Segoe UI'; font-size:20px; font-weight:600 ">
+                        <li class="nav-item" >
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Animals" asp-action="Index">Dieren</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Animals" asp-action="Index">Dieren</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Categorieën</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Categories" asp-action="Index">Categorieën</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Enclosures" asp-action="Index">Verblijven</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Enclosures" asp-action="Index">Verblijven</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Zoos" asp-action="Index">Dierentuinen</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Zoos" asp-action="Index">Dierentuinen</a>
                         </li>
                     </ul>
                 </div>
@@ -45,7 +45,9 @@
         </main>
     </div>
 
-  
+  <style>
+     
+  </style>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
