--- a/Dierentuin42/Views/Zoos/Index.cshtml
+++ b/Dierentuin42/Views/Zoos/Index.cshtml
@@ -16,6 +16,9 @@
     <a class="btn btn-info btn-lg mx-2 px-5 py-3 shadow-sm" asp-controller="Animals" asp-action="FeedingTime">
         <i class="fas fa-utensils"></i> Feeding Time
     </a>
+    <a class="btn btn-danger btn-lg mx-2 px-5 py-3 shadow-sm" asp-controller="Animals" asp-action="CheckConstraints">
+        <i class="fas fa-utensils"></i> Check Contsraints
+    </a>
 </div>
 
 
