--- a/Dierentuin42/Views/Animals/Create.cshtml
+++ b/Dierentuin42/Views/Animals/Create.cshtml
@@ -84,6 +84,12 @@
                             <option value="">Selecteer Verblijf</option>
                         </select>
                         <span asp-validation-for="EnclosureId" class="text-danger"></span>
+                            <label class="control-label"></label>
+                        <div class="form-check">
+                            <input type="checkbox" class="form-check-input" id="resetAll" name="resetAll" value="true" />
+                            <label class="form-check-label" for="resetAll">Verblijven Aanvullen</label>
+                        </div>
+
                     </div>
 
                     <div class="form-group">
